[package]
name = "hergmes"
version = "0.1.0"
edition = "2024"
authors = ["Alison Oliveira <arobsn@proton.me>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hergmes"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
once_cell = "1.21.3"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.17"
hex = "0.4.3"
arc-swap = "1.7.1"
