[package]
authors = ["Alison Oliveira <arobsn@proton.me>"]
edition = "2024"
name = "hergmes"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hergmes"
path = "src/main.rs"

[dependencies]
arc-swap = "1.7.1"
blake2 = "0.10"
bs58 = "0.5"
dotenvy = "0.15.7"
hex = "0.4.3"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
